--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                     <button type="button">Sign Up</button>
                 </div>
                 <div class="hero-1 hero-image">
-                    <img src="images/shib.webp" alt="shiba">
+                    <img src="images\images/shib.webp" alt="shiba">
                 </div>
             </div>
 
@@ -36,19 +36,19 @@
                 <h2>Types of Good Bois</h2>
                 <div class="content-info">
                     <div>
-                        <img src="images/shib-1.webp">
+                        <img src="images\images/shib-1.webp">
                         <p>Best shibs</p>
                     </div>
                     <div>
-                        <img src="images/shib-2.webp">
+                        <img src="images\images/shib-2.webp">
                         <p>Shibs party</p>
                     </div>
                     <div>
-                        <img src="images/shib-3.webp">
+                        <img src="images\images/shib-3.webp">
                         <p>Good boi</p>
                     </div>
                     <div>
-                        <img src="images/shib-4.webp">
+                        <img src="images\images/shib-4.webp">
                         <p>Hat boi</p>
                     </div>
                 </div>
