--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
             
             <nav class="bx navbar">
                 <div class="header-logo">
-                    <img src="images/shiba-logo.png">
+                    <img src="images\images/shiba-logo.png">
                 </div>
                 <div class="header-link">
                     <a href="#">About</a>
