--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="icon" href="images/shiba-logo.png">
+        <link rel="icon" href="images\images/shiba-logo.png">
         <link href="style.css" rel="stylesheet" type="text/css" media="all"/>
         <title>Shiba - Official Page</title>
     </head>
